--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
             </div>
             <div class="services_items">
                 <div class="item">
-                    <img src="/img/play-list-search.svg" alt="search" class="services_items_img">
+                    <img src="./img/play-list-search.svg" alt="search" class="services_items_img">
                     <h3 class="services_items_title">Search Engine Optimization</h3>
                 </div>
                 <div class="item">
-                    <img src="/img/instagram.svg" alt="instagram" class="services_items_img">
+                    <img src="./img/instagram.svg" alt="instagram" class="services_items_img">
                     <h3 class="services_items_title">Social Media Optimization</h3>
                 </div>
                 <div class="item">
-                    <img src="/img/pen.svg" alt="pen" class="services_items_img">
+                    <img src="./img/pen.svg" alt="pen" class="services_items_img">
                     <h3 class="services_items_title">UX Writer</h3>
                 </div>
             </div>
@@ -51,21 +51,21 @@
             </div>
             <div class="team_items">
                 <div class="team_item">
-                    <img src="/img/team1.png" alt="team1" class="team_img">
+                    <img src="./img/team1.png" alt="team1" class="team_img">
                     <div class="team_block">
                         <h4 class="team_title">Sarah Gilbert</h4>
                         <p class="team_text">CEO & Founder DigiXine</p>
                     </div>
                 </div>
                 <div class="team_item">
-                    <img src="/img/team2.png" alt="team2" class="team_img">
+                    <img src="./img/team2.png" alt="team2" class="team_img">
                     <div class="team_block">
                         <h4 class="team_title">Stephen Joe</h4>
                         <p class="team_text">CEO & Founder DigiXine</p>
                     </div>
                 </div>
                 <div class="team_item">
-                    <img src="/img/team3.png" alt="team3" class="team_img">
+                    <img src="./img/team3.png" alt="team3" class="team_img">
                     <div class="team_block">
                         <h4 class="team_title">Danie Rogue</h4>
                         <p class="team_text">Senior UX Writer</p>
