--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="services_items">
                 <div class="item">
-                    <img src="../img/play-list-search.svg" alt="search" class="services_items_img">
+                    <img src="./img/play-list-search.svg" alt="search" class="services_items_img">
                     <h3 class="services_items_title">Search Engine Optimization</h3>
                 </div>
                 <div class="item">
